deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsmetrics
  labels:
    app.kubernetes.io/name: tsmetrics
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9100'
    prometheus.io/path: '/metrics'
spec:
  type: ClusterIP
  ports:
    - port: 9100
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: tsmetrics
